[gd_scene load_steps=3 format=3 uid="uid://c7esqv2uuvw5m"]

[ext_resource type="Script" path="res://HUD/Pause.gd" id="1_kv4mq"]
[ext_resource type="PackedScene" uid="uid://cxgatpplm4rgv" path="res://HUD/skill_tree.tscn" id="2_kd1rt"]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_kv4mq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1020.0
offset_bottom = 594.0

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.0
offset_top = -83.0
offset_right = 46.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2

[node name="Paused" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.384314, 0, 1)
theme_override_colors/font_shadow_color = Color(0.988235, 0.776471, 0.639216, 1)
text = "Paused"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Resume"

[node name="Options" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Options"

[node name="Skill Tree" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Skill Tree"

[node name="Quit" type="Button" parent="MainContainer"]
layout_mode = 2
text = "Quit Game"

[node name="OptionsContainer" type="MarginContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -223.0
offset_top = -90.5
offset_right = 223.0
offset_bottom = 90.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer"]
layout_mode = 2

[node name="OptionHeader" type="Label" parent="OptionsContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.384314, 0, 1)
text = "Options"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="OptionsContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="MasterLbl" type="Label" parent="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.384314, 0, 1)
text = "Master
"

[node name="MusicLbl" type="Label" parent="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.384314, 0, 1)
text = "Music"

[node name="SoundFXLbl" type="Label" parent="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.384314, 0, 1)
text = "Sound Fx"

[node name="NightDarknessLbl" type="Label" parent="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.662745, 0.384314, 0, 1)
text = "Nighttime Darkness"

[node name="VBoxContainer2" type="VBoxContainer" parent="OptionsContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="MasterSlider" type="HSlider" parent="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
min_value = -30.0
max_value = 20.0

[node name="MusicSlider" type="HSlider" parent="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
min_value = -30.0
max_value = 20.0

[node name="SFxSlider" type="HSlider" parent="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
min_value = -30.0
max_value = 20.0

[node name="HSlider4" type="HSlider" parent="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="BackOptions" type="Button" parent="OptionsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="SkillsTreeContainer" type="MarginContainer" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0

[node name="SkillTree" parent="SkillsTreeContainer" instance=ExtResource("2_kd1rt")]
layout_mode = 2

[connection signal="pressed" from="MainContainer/Resume" to="." method="resumePressed"]
[connection signal="pressed" from="MainContainer/Options" to="." method="showOptions"]
[connection signal="pressed" from="MainContainer/Skill Tree" to="." method="showSkillsTree"]
[connection signal="pressed" from="MainContainer/Quit" to="." method="quitPressed"]
[connection signal="value_changed" from="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MasterSlider" to="." method="masterVolumeChanged"]
[connection signal="value_changed" from="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer2/MusicSlider" to="." method="musicVolumeChanged"]
[connection signal="value_changed" from="OptionsContainer/VBoxContainer/HBoxContainer/VBoxContainer2/SFxSlider" to="." method="sfxVolumeChanged"]
[connection signal="pressed" from="OptionsContainer/VBoxContainer/BackOptions" to="." method="hideOptions"]
